made README and fixed style